# CompGraphicsAssignments

./: Readme.md
Assignment1/Vehicle_processing/: Car.pde  Vehicle_processing.pde  Wheels.pde
Assignment10/: Lab 10.docx
Assignment10/Fog/: Geometries.h  House.cpp  House.h  LabExam2  Makefile  Object.cpp  Object.h  Tree.cpp  Tree.h  WindowManager.cpp  WindowManager.h
Assignment11/: .~lock.Lab 11.docx#  Lab 11.docx
Assignment11/gluTess/: .fuse_hidden0000003800000001  Makefile  WindowManager.cpp  WindowManager.h
Assignment2/: Lab 2.docx
Assignment2/MidPoint/: MidPoint.pde
Assignment3/: Lab 3.docx
Assignment3/MultiPolygon/: Initialisation.pde  MultiPolygon.pde  MultiPolygon_backup  Polygon.pde
Assignment3/Polygon/: Polygon.pde
Assignment4/: Lab 4.docx
Assignment4/Clipping/: Clipping.pde  Geometry.pde  Line.pde  Renderer.pde
Assignment5/PolygonGlut/: barChart.cpp  compile.sh  main.cpp  main.cpp~  polygon
Assignment5/barChart/: barChart  barChart.cpp  compile.sh  input
Assignment6/: Lab 6.docx
Assignment6/Geom3D/: Assignment3.cpp  Assignment3.h~  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Cylinder.h~  Geometries.h  Makefile  Output  Sphere.cpp  Sphere.h  Tetrahedron.cpp  Tetrahedron.h  compile.sh  input  input~  main.cpp
Assignment7/: Lab 7.docx
Assignment8/: Lab 8.docx
Assignment9/: Lab 9.docx
LabExam2/Source/: CMakeLists.txt  Fountain.cpp  Fountain.h  Geometries.h  House.cpp  House.h  Light.cpp  Light.h  Mountains.cpp  Mountains.h  Rocket.cpp  Rocket.h  Sky.cpp  Sky.h  Tree.cpp  Tree.h  WindowManager.cpp  WindowManager.h
(+17 files in other folders)
